# libkafka-asio

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  mkdocs.yml
cmake/: SourceGroupByFolder.cmake
cmake/Modules/: FindSnappy.cmake
docs/: build_configuration.md  client.md  client_configuration.md  connection.md  connection_configuration.md  consumer_metadata_request.md  consumer_metadata_response.md  extra.css  fetch_request.md  fetch_response.md  index.html  message.md  message_and_offset.md  message_set.md  metadata_request.md  metadata_response.md  offset_commit_request.md  offset_commit_response.md  offset_fetch_request.md  offset_fetch_response.md  offset_request.md  offset_response.md  primitives.md  produce_request.md  produce_response.md
docs/reference/: fetch.md  metadata.md  offset.md  produce.md
examples/: CMakeLists.txt  README.md  fetch_cxx03.cpp  fetch_cxx11.cpp  metadata_cxx03.cpp  metadata_cxx11.cpp  offset_cxx03.cpp  offset_cxx11.cpp  offset_fetch_cxx03.cpp  offset_fetch_cxx11.cpp  produce_cxx03.cpp  produce_cxx11.cpp
examples/cpp03/: CMakeLists.txt  offset.cpp  offset_fetch.cpp
examples/cpp11/: CMakeLists.txt  offset.cpp  offset_fetch.cpp
lib/: CMakeLists.txt
lib/libkafka_asio/: client.h  client_configuration.h  connection.h  connection_configuration.h  constants.h  consumer_metadata_request.h  consumer_metadata_response.h  error.h  fetch_request.h  fetch_response.h  libkafka_asio.h  message.h  message_fwd.h  metadata_request.h  metadata_response.h  offset_commit_request.h  offset_commit_response.h  offset_fetch_request.h  offset_fetch_response.h  offset_request.h  offset_response.h  primitives.h  produce_request.h  produce_response.h  request.h  response.h
lib/libkafka_asio/detail/: basic_connection.h  bytes_streambuf.h  compression.h  compression_gz.h  compression_snappy.h  connection_service.h  empty_property.h  endian.h  fetch_response_iterator.h  functional.h  recursive_messageset_iterator.h  request_write.h  response_read.h  topic_partition_block.h  topic_partition_map.h  topics_partitions.h  weak_impl_handler.h
lib/libkafka_asio/detail/impl/: bytes_streambuf.h  compression.h  compression_gz.h  compression_snappy.h  connection_service.h  consumer_metadata_request_write.h  consumer_metadata_response_read.h  fetch_request_write.h  fetch_response_read.h  message_read.h  message_write.h  metadata_request_write.h  metadata_response_read.h  offset_commit_request_write.h  offset_commit_response_read.h  offset_fetch_request_write.h  offset_fetch_response_read.h  offset_request_write.h  offset_response_read.h  produce_request_write.h  produce_response_read.h  recursive_messageset_iterator.h  request_write.h  response_read.h
lib/libkafka_asio/impl/: client.h  client_configuration.h  connection.h  connection_configuration.h  consumer_metadata_request.h  consumer_metadata_response.h  fetch_request.h  fetch_response.h  message.h  metadata_request.h  metadata_response.h  offset_commit_request.h  offset_commit_response.h  offset_fetch_request.h  offset_fetch_response.h  offset_request.h  offset_response.h  produce_request.h  produce_response.h
test/: CMakeLists.txt
test/src/: StreamTest.h  client_configuration_test.cpp  connection_configuration_test.cpp  error_test.cpp  fetch_request_test.cpp  libkafka_asio_test.cpp  message_test.cpp  metadata_response_test.cpp
test/src/detail/: compression_gz_test.cpp  compression_snappy_test.cpp  consumer_metadata_request_write_test.cpp  fetch_request_write_test.cpp  fetch_response_iterator_test.cpp  functional_test.cpp  metadata_request_write_test.cpp  offset_commit_request_write_test.cpp  offset_fetch_request_write_test.cpp  offset_request_write_test.cpp  produce_request_write_test.cpp  recursive_messageset_iterator_test.cpp  request_write_test.cpp  response_read_test.cpp
